--- a/jurnalanda/style.css
+++ b/jurnalanda/style.css
@@ -202,3 +202,20 @@ h2 img {
 	padding: 20px;
 
 }
+.header #buat {
+	background-color: #0085FF;
+	padding: 20px 20px;
+	border-radius: 10px;
+
+}
+
+.header ul li a:hover {
+	background-color: #0085FF;
+	padding: 20px 20px;
+	border-radius: 10px;
+	color: white;
+}
+
+#buat:hover {
+	color: white;
+}
